--- a/changeURLplugin/main.html
+++ b/changeURLplugin/main.html
@@ -1,6 +1,8 @@
 <html>
 	<body>
-		<div id = "status"></div>
+		<div id = "status">
+			<input id = "inputPad" type = "text" name = "txt">
+		</div>
 	</body>
 	<script src = "main.js"></script>
 </html>
